crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow_tpcds_q26_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpcds_q26"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: item.i_item_id ASC NULLS LAST, fetch=100                                                                                                                                                                                                                                      |
|               |   Projection: item.i_item_id, avg(catalog_sales.cs_quantity) AS agg1, avg(catalog_sales.cs_list_price) AS agg2, avg(catalog_sales.cs_coupon_amt) AS agg3, avg(catalog_sales.cs_sales_price) AS agg4                                                                                 |
|               |     Aggregate: groupBy=[[item.i_item_id]], aggr=[[avg(CAST(catalog_sales.cs_quantity AS Float64)), avg(catalog_sales.cs_list_price), avg(catalog_sales.cs_coupon_amt), avg(catalog_sales.cs_sales_price)]]                                                                          |
|               |       Projection: catalog_sales.cs_quantity, catalog_sales.cs_list_price, catalog_sales.cs_sales_price, catalog_sales.cs_coupon_amt, item.i_item_id                                                                                                                                 |
|               |         Inner Join: catalog_sales.cs_bill_cdemo_sk = customer_demographics.cd_demo_sk                                                                                                                                                                                               |
|               |           Projection: catalog_sales.cs_bill_cdemo_sk, catalog_sales.cs_quantity, catalog_sales.cs_list_price, catalog_sales.cs_sales_price, catalog_sales.cs_coupon_amt, item.i_item_id                                                                                             |
|               |             Inner Join: catalog_sales.cs_sold_date_sk = date_dim.d_date_sk                                                                                                                                                                                                          |
|               |               Projection: catalog_sales.cs_sold_date_sk, catalog_sales.cs_bill_cdemo_sk, catalog_sales.cs_quantity, catalog_sales.cs_list_price, catalog_sales.cs_sales_price, catalog_sales.cs_coupon_amt, item.i_item_id                                                          |
|               |                 Inner Join: catalog_sales.cs_item_sk = item.i_item_sk                                                                                                                                                                                                               |
|               |                   Projection: catalog_sales.cs_sold_date_sk, catalog_sales.cs_bill_cdemo_sk, catalog_sales.cs_item_sk, catalog_sales.cs_quantity, catalog_sales.cs_list_price, catalog_sales.cs_sales_price, catalog_sales.cs_coupon_amt                                            |
|               |                     Inner Join: catalog_sales.cs_promo_sk = promotion.p_promo_sk                                                                                                                                                                                                    |
|               |                       TableScan: catalog_sales projection=[cs_sold_date_sk, cs_bill_cdemo_sk, cs_item_sk, cs_promo_sk, cs_quantity, cs_list_price, cs_sales_price, cs_coupon_amt]                                                                                                   |
|               |                       Projection: promotion.p_promo_sk                                                                                                                                                                                                                              |
|               |                         Filter: promotion.p_channel_email = LargeUtf8("N") OR promotion.p_channel_event = LargeUtf8("N")                                                                                                                                                            |
|               |                           TableScan: promotion projection=[p_promo_sk, p_channel_email, p_channel_event]                                                                                                                                                                            |
|               |                   TableScan: item projection=[i_item_sk, i_item_id]                                                                                                                                                                                                                 |
|               |               Projection: date_dim.d_date_sk                                                                                                                                                                                                                                        |
|               |                 Filter: date_dim.d_year = Int32(2000)                                                                                                                                                                                                                               |
|               |                   TableScan: date_dim projection=[d_date_sk, d_year]                                                                                                                                                                                                                |
|               |           Projection: customer_demographics.cd_demo_sk                                                                                                                                                                                                                              |
|               |             Filter: customer_demographics.cd_gender = LargeUtf8("F") AND customer_demographics.cd_marital_status = LargeUtf8("M") AND customer_demographics.cd_education_status = LargeUtf8("4 yr Degree")                                                                          |
|               |               TableScan: customer_demographics projection=[cd_demo_sk, cd_gender, cd_marital_status, cd_education_status]                                                                                                                                                           |
| physical_plan | SortPreservingMergeExec: [i_item_id@0 ASC NULLS LAST], fetch=100                                                                                                                                                                                                                    |
|               |   ProjectionExec: expr=[i_item_id@0 as i_item_id, avg(catalog_sales.cs_quantity)@1 as agg1, avg(catalog_sales.cs_list_price)@2 as agg2, avg(catalog_sales.cs_coupon_amt)@3 as agg3, avg(catalog_sales.cs_sales_price)@4 as agg4]                                                    |
|               |     SortExec: TopK(fetch=100), expr=[i_item_id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                      |
|               |       AggregateExec: mode=FinalPartitioned, gby=[i_item_id@0 as i_item_id], aggr=[avg(catalog_sales.cs_quantity), avg(catalog_sales.cs_list_price), avg(catalog_sales.cs_coupon_amt), avg(catalog_sales.cs_sales_price)]                                                            |
|               |         RepartitionExec: partitioning=Hash([i_item_id@0], 32), input_partitions=32                                                                                                                                                                                                  |
|               |           AggregateExec: mode=Partial, gby=[i_item_id@4 as i_item_id], aggr=[avg(catalog_sales.cs_quantity), avg(catalog_sales.cs_list_price), avg(catalog_sales.cs_coupon_amt), avg(catalog_sales.cs_sales_price)]                                                                 |
|               |             HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(cs_bill_cdemo_sk@0, cd_demo_sk@0)], projection=[cs_quantity@1, cs_list_price@2, cs_sales_price@3, cs_coupon_amt@4, i_item_id@5]                                                |
|               |               CoalescePartitionsExec                                                                                                                                                                                                                                                |
|               |                 HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(cs_sold_date_sk@0, d_date_sk@0)], projection=[cs_bill_cdemo_sk@1, cs_quantity@2, cs_list_price@3, cs_sales_price@4, cs_coupon_amt@5, i_item_id@6]                          |
|               |                   CoalescePartitionsExec                                                                                                                                                                                                                                            |
|               |                     HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(cs_item_sk@2, i_item_sk@0)], projection=[cs_sold_date_sk@0, cs_bill_cdemo_sk@1, cs_quantity@3, cs_list_price@4, cs_sales_price@5, cs_coupon_amt@6, i_item_id@8]        |
|               |                       CoalescePartitionsExec                                                                                                                                                                                                                                        |
|               |                         HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(p_promo_sk@0, cs_promo_sk@3)], projection=[cs_sold_date_sk@1, cs_bill_cdemo_sk@2, cs_item_sk@3, cs_quantity@5, cs_list_price@6, cs_sales_price@7, cs_coupon_amt@8] |
|               |                           FilterExec: p_channel_email@1 = N OR p_channel_event@2 = N, projection=[p_promo_sk@0]                                                                                                                                                                     |
|               |                             SchemaCastScanExec                                                                                                                                                                                                                                      |
|               |                               BytesProcessedExec                                                                                                                                                                                                                                    |
|               |                                 DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                                          |
|               |                           SchemaCastScanExec                                                                                                                                                                                                                                        |
|               |                             BytesProcessedExec                                                                                                                                                                                                                                      |
|               |                               DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                                                                           |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                                         |
|               |                         SchemaCastScanExec                                                                                                                                                                                                                                          |
|               |                           BytesProcessedExec                                                                                                                                                                                                                                        |
|               |                             DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                                              |
|               |                   FilterExec: d_year@1 = 2000, projection=[d_date_sk@0]                                                                                                                                                                                                             |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                                           |
|               |                       SchemaCastScanExec                                                                                                                                                                                                                                            |
|               |                         BytesProcessedExec                                                                                                                                                                                                                                          |
|               |                           DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                                                |
|               |               FilterExec: cd_gender@1 = F AND cd_marital_status@2 = M AND cd_education_status@3 = 4 yr Degree, projection=[cd_demo_sk@0]                                                                                                                                            |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                  |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                |
|               |                     DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                                                                                     |
|               |                                                                                                                                                                                                                                                                                     |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
